docs: simplify documentation and add missing glossary entries
- Add GLOSSARY entries: IAM, VPC, ADOT
- Trim GETTING_STARTED Key Concepts section (keep Just only, link GLOSSARY)
- Consolidate cost warnings to link to eksauto/README.md
- Add success output example to GETTING_STARTED
- Add analyse-site-ia to main README examples table
- Fix ESO acronym in secrets/README.md
- Gitignore DDEV boilerplate files (*.example, README*.txt)

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ __pycache__/
 .mnt
 .codeql/
 .aider*
+
+# DDEV boilerplate (auto-generated on ddev start)
+drupal/.ddev/**/*.example
+drupal/.ddev/**/README*.txt
+drupal/.ddev/.homeadditions/
