fix: correct ArgoCD path, remove hardcoded region, improve consistency
- Fix ApplicationSet path from kustomize-argocd/apps to argocd/apps
- Remove hardcoded region in ClusterSecretStore (Pod Identity auto-detects)
- Fix git clone URL in GETTING_STARTED.md
- Remove incorrect EFS CSI reference from eksauto README
- Standardize rclone image version to 1.72
- Add missing security contexts to s3-pod-identity/mysql and rclone deployments

--- a/argocd/base/applicationset.yaml
+++ b/argocd/base/applicationset.yaml
@@ -15,7 +15,7 @@ spec:
         repoURL: https://github.com/wagov-dtt/tutorials-and-workshops.git
         revision: HEAD
         directories:
-          - path: kustomize-argocd/apps/*
+          - path: argocd/apps/*
   template:
     metadata:
       # App name = directory name
