--- a/s3-pod-identity/base/mysql.yaml
+++ b/s3-pod-identity/base/mysql.yaml
@@ -24,6 +24,13 @@ spec:
       labels:
         app: mysql
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1001
+        runAsGroup: 1001
+        fsGroup: 1001
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - name: mysql
         image: percona:8.0
@@ -36,6 +43,10 @@ spec:
         volumeMounts:
         - name: data
           mountPath: /var/lib/mysql
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop: ["ALL"]
       volumes:
       - name: data
         emptyDir: {}
